third_party/move/move-compiler-v2/tests/checking/typing/recursive_local.move
address 0x42 {
module M {
    fun t() {
        let x;
        x = vector[x];
    }
}
}
